[tool.poetry]
name = "etl1"
version = "0.1.0"
description = ""
authors = ["joaoocker <82133025+joaoocker@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gdown = "^5.2.0"
duckdb = "^1.1.3"
streamlit = "^1.41.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
